--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "giselle-zatonyl-programming",
+  "name": "front-end-scaffold",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "Giselle Zatonyl <gz@gisellezatonyl.com>",
+  "author": "Giselle Zatonyl <gisellezatonyl@gmail.com>",
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
