--- a/package.json
+++ b/package.json
@@ -47,10 +47,14 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.6.0",
     "@svgr/webpack": "^4.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "axios": "^0.20.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "css-loader": "^3.2.0",
+    "eslint": "^7.10.0",
+    "eslint-plugin-react": "^7.21.2",
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
@@ -63,6 +67,7 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "2.1.2",
     "redux": "^4.0.5",
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^9.0.3",
